# openprot

drivers/flash/: BUILD.bazel  spi_flash.rs
protocol/spi/spitpm/: BUILD.bazel
protocol/spi/spitpm/src/: main.rs
services/mock_tpm/: BUILD.bazel
services/mock_tpm/src/: main.rs
util/error/: flash.rs
util/sfdp/: BUILD.bazel  mod.rs
