# Licensed under the Apache-2.0 license
# SPDX-License-Identifier: Apache-2.0

load("@pigweed//pw_kernel/tooling:rust_app.bzl", "rust_app")

rust_app(
    name = "mock_tpm_service",
    srcs = [
        "src/main.rs",
    ],
    codegen_crate_name = "mock_tpm_codegen",
    edition = "2024",
    system_config = "@pigweed//pw_kernel/target:system_config_file",
    tags = ["kernel"],
    visibility = ["//visibility:public"],
    deps = [
        "@pigweed//pw_kernel/userspace",
        "@pigweed//pw_log/rust:pw_log",
        "@pigweed//pw_status/rust:pw_status",
    ],
)
